W.I.P. v0.3-Alpha, not functioning right now.
Signed-off-by: Jake Nijssen <jtmnijssen@outlook.com>